# edgar-scanner

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: score_single_ticker.py  search_sec_filings.py
src/sec_filing_intelligence/: __init__.py  ampx_rules.py  config.py  db.py  deep_dive.py  discovery.py  filing_scanner.py  form4_parser.py  form4_rss_poller.py  forward_moat.py  fundamentals.py  insider_tracker.py  moat_scorer.py  price_analyzer.py  utils.py  xbrl_fundamentals.py
tests/: conftest.py  test_ampx_rules.py  test_deep_dive.py  test_discovery.py  test_form4_parser.py  test_form4_poller.py  test_forward_moat.py  test_moat_scorer.py  test_screener_db.py  test_xbrl_fundamentals.py
tests/fixtures/form4/: amendment.xml  atom_feed_sample.xml  form4a_amendment.xml  multi_transaction.xml  single_purchase.xml
